initial design implementation

--- a/sass/type.scss
+++ b/sass/type.scss
@@ -1,3 +1,6 @@
+$font-stack: freight-big-pro, serif;
+$primary-color: #333;
+
 h1,
 h2,
 h3,
@@ -7,7 +10,6 @@ h5 {
   font-weight: 900;
   font-style: italic;
 }
-
 body {
   font-family: proxima-nova, sans-serif;
   font-weight: 500;
@@ -158,62 +160,3 @@ font-family: freightdispcmp-pro, serif;
 font-weight: 700;
 font-style: italic;
 */
-body {
-  margin: 0;
-}
-
-img {
-  max-width: 100%;
-}
-
-.sidebar {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  background-color: black;
-  width: 70px;
-  position: fixed;
-  height: 100vh;
-  padding: 5px;
-}
-.sidebar .logo {
-  padding: 7px;
-}
-.sidebar .middle-info {
-  color: white;
-  flex-grow: 4;
-}
-.sidebar .contact-info {
-  padding: 5px 5px 15px 5px;
-}
-.sidebar .contact-info a {
-  color: white;
-}
-
-main {
-  background-color: blueviolet;
-  margin-left: 80px;
-}
-main .entry-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 5px 10px;
-  background-color: #a0a0a0;
-  position: -webkit-sticky;
-  position: sticky;
-  top: -1px;
-}
-main .entry-header h2 {
-  font-family: proxima-nova, sans-serif;
-  font-weight: 500;
-  font-style: normal;
-  font-size: 16px;
-  margin: 0;
-}
-main .entry {
-  background-color: cadetblue;
-  padding: 10% 15%;
-}
-
-/*# sourceMappingURL=styles.css.map */
