--- a/sass/main.scss
+++ b/sass/main.scss
@@ -41,7 +41,7 @@ main {
     justify-content: space-between;
     align-items: center;
     padding: 5px 10px;
-    background-color: #a0a0a0;
+    background-color: #efefef;
     position: -webkit-sticky;
     position: sticky;
     top: -1px;
@@ -55,9 +55,18 @@ main {
   }
   .entry {
     background-color: transparent;
-    padding: 10% 15%;
+    &.padmax {
+      padding: 10% 15%;
+    }
+    &.padmin {
+      padding: 3% 5%;
+    }
     &.black {
       background-color: black;
+    }
+    video {
+      width: 100% !important;
+      height: auto !important;
     }
   }
 }
