--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,18 +15,33 @@ img {
   position: fixed;
   height: 100vh;
   padding: 5px;
+  word-break: break-word;
+  font-size: 14px;
+  text-align: center;
   .logo {
     padding: 7px;
   }
   .middle-info {
     color: white;
+    padding: 5px;
     flex-grow: 4;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: flex-end;
     h2 {
       //transform: rotate(-90deg);
     }
   }
   .contact-info {
+    color: white;
     padding: 5px 5px 15px 5px;
+    font-size: 12px;
+    span {
+      display: block;
+      font-size: 22px;
+      font-weight: 100;
+    }
     a {
       color: white;
     }
@@ -55,6 +70,16 @@ main {
   }
   .entry {
     background-color: transparent;
+    &.multi-flex {
+      display: flex;
+      align-content: flex-start;
+      align-items: flex-start;
+      flex-wrap: wrap;
+      img {
+        width: 25%;
+        margin: 35px;
+      }
+    }
     &.padmax {
       padding: 10% 15%;
     }
