--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,14 @@
   font-size: 72px;
 }
 
+.font-little-buddy {
+  font-family: jubilat, serif;
+  font-weight: 400;
+  font-style: normal;
+  line-height: 100%;
+  font-size: 16px;
+}
+
 .font-speech {
   font-family: proxima-nova, sans-serif;
   font-style: normal;
