--- a/src/index.css
+++ b/src/index.css
@@ -14,12 +14,28 @@ html {
   font-size: 32px;
 }
 
+.font-medium-buddy {
+  font-family: jubilat, serif;
+  font-weight: 400;
+  font-style: normal;
+  line-height: 100%;
+  font-size: 40px;
+}
+
 .font-little-buddy {
   font-family: jubilat, serif;
   font-weight: 400;
   font-style: normal;
   line-height: 100%;
   font-size: 16px;
+}
+
+.font-test {
+  font-family: proxima-nova, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 115%;
+  font-size: 30px;
 }
 
 .font-speech {
