--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,7 @@ html {
 }
 
 .font-big-buddy {
-  font-family: jubilat, serif;
+  font-family: "jubilat", serif;
   font-weight: 400;
   font-style: normal;
   line-height: 100%;
@@ -31,7 +31,7 @@ html {
 }
 
 .font-medium-buddy {
-  font-family: jubilat, serif;
+  font-family: "jubilat", serif;
   font-weight: 400;
   font-style: normal;
   line-height: 100%;
@@ -39,7 +39,7 @@ html {
 }
 
 .font-little-buddy {
-  font-family: jubilat, serif;
+  font-family: "jubilat", serif;
   font-weight: 400;
   font-style: normal;
   line-height: 100%;
@@ -47,7 +47,7 @@ html {
 }
 
 .font-test {
-  font-family: proxima-nova, sans-serif;
+  font-family: "proxima-nova", sans-serif;
   font-style: normal;
   font-weight: 500;
   line-height: 115%;
@@ -55,7 +55,7 @@ html {
 }
 
 .font-speech {
-  font-family: proxima-nova, sans-serif;
+  font-family: "proxima-nova", sans-serif;
   font-style: normal;
   font-weight: 300;
   line-height: 115%;
@@ -63,7 +63,7 @@ html {
 }
 
 .font-btn {
-  font-family: proxima-nova, sans-serif;
+  font-family: "proxima-nova", sans-serif;
   font-style: normal;
   font-weight: 300;
   line-height: 115%;
@@ -71,7 +71,7 @@ html {
 }
 
 .font-base {
-  font-family: proxima-nova, sans-serif;
+  font-family: "proxima-nova", sans-serif;
   font-style: normal;
   font-weight: 300;
   line-height: 130%;
@@ -79,7 +79,7 @@ html {
 }
 
 .font-tiny {
-  font-family: proxima-nova, sans-serif;
+  font-family: "proxima-nova", sans-serif;
   font-style: normal;
   font-weight: 300;
   line-height: 115%;
