--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,7 @@ html {
 }
 
 .font-big-buddy {
-  font-family: "jubilat", serif;
+  font-family: "jubilat", "proxima-nova", sans-serif;
   font-weight: 400;
   font-style: normal;
   line-height: 100%;
@@ -31,7 +31,7 @@ html {
 }
 
 .font-medium-buddy {
-  font-family: "jubilat", serif;
+  font-family: "jubilat", "proxima-nova", sans-serif;
   font-weight: 400;
   font-style: normal;
   line-height: 100%;
@@ -39,7 +39,7 @@ html {
 }
 
 .font-little-buddy {
-  font-family: "jubilat", serif;
+  font-family: "jubilat", "proxima-nova", sans-serif;
   font-weight: 400;
   font-style: normal;
   line-height: 100%;
@@ -76,6 +76,14 @@ html {
   font-weight: 300;
   line-height: 130%;
   font-size: 14px;
+}
+
+.font-skills {
+  font-family: "proxima-nova", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 115%;
+  font-size: 16px;
 }
 
 .font-tiny {
