--- a/src/index.css
+++ b/src/index.css
@@ -16,10 +16,22 @@ html {
   padding: 8px 16px;
   color: white;
   border-radius: 4px;
+  display: inline-block;
 }
 .tiny-button:hover {
   background-color: #ff8572;
   color: black;
+}
+.huge-button {
+  width: 100%;
+  height: 60px;
+  background-color: #1f6d99;
+  display: flex;
+  text-align: center;
+  color: white;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
 }
 
 .font-big-buddy {
