--- a/src/index.css
+++ b/src/index.css
@@ -42,12 +42,20 @@ html {
   font-size: 32px;
 }
 
-.font-medium-buddy {
+.font-tiny-buddy {
   font-family: "proxima-nova", sans-serif;
   font-weight: 300;
   font-style: normal;
   line-height: 100%;
   font-size: 20px;
+}
+
+.font-medium-buddy {
+  font-family: "proxima-nova", sans-serif;
+  font-weight: 900;
+  font-style: normal;
+  line-height: 120%;
+  font-size: 40px;
 }
 
 .font-little-buddy {
