--- a/src/index.css
+++ b/src/index.css
@@ -19,8 +19,7 @@ html {
   display: inline-block;
 }
 .tiny-button:hover {
-  background-color: #ff8572;
-  color: black;
+  background-color: #1b7ab0;
 }
 .huge-button {
   width: 100%;
@@ -136,7 +135,7 @@ html {
 
 @media screen and (min-width: 1024px) {
   .font-big-buddy {
-    font-size: 72px;
+    font-size: 58px;
   }
   .font-base {
     font-size: 18px;
